--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,11 +9,15 @@ main{
     font-size: 20px;
 }
 
-img{
+.destaque{
     width: 100%;
     max-width: 800px;
     margin: 0 auto 0 auto;
     display: block
+}
+footer img{
+    width: 32px
+    
 }
 
 header{
@@ -24,6 +28,8 @@ header{
 
 body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: rgb(202, 55, 55);
+    background-color: rgb(246, 125, 125);
 }
+
+
 
